--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: demsrc
 Title: Get remote URLs for remote Digital Elevation Model (DEM) collections
-Version: 0.2.1
+Version: 0.2.2
 Authors@R: 
     person("Hugh", "Graham", , "hugh.graham@permianglobal.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-9451-5010"))
@@ -13,6 +13,7 @@ RoxygenNote: 7.3.1
 Imports: 
     checkmate,
     httr,
+    purrr,
     rlang,
     rstac
 Suggests: 
