--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      rsi_pc_key: ${{ secrets.RSI_PC_KEY }}
 
     steps:
       - uses: actions/checkout@v3
