improve pkgdown and readme

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,12 +1,6 @@
 url: https://permian-global-research.github.io/demsrc/
 template:
   bootstrap: 5
-  bootswatch: solar
-  navbar:
-    bg: primary
-    type: dark
-  theme: arrow-dark
-  bslib:
-    primary: '#FF963A'
-    success: '#FF963A'
-
+  light-switch: true
+  theme: gruvbox-light
+  theme-dark: gruvbox-dark
